--- a/css/home_works.css
+++ b/css/home_works.css
@@ -40,7 +40,7 @@
     border: 1px solid var(--orange);
     position: relative;
     margin: 0 auto;
-    border-radius: 20px;
+    border-radius: 5px;
     padding: 50px;
 }
 
@@ -188,7 +188,7 @@
 .time_block {
     display: flex;
     width: 500px;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .stopwatch {
