--- a/css/lessons.css
+++ b/css/lessons.css
@@ -133,9 +133,12 @@
 
 .inner_converter {
     display: flex;
+    width: 1100px;
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: auto;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
     gap: 30px;
     margin-top: 50px;
 }
